added new passive scan configuration dialog

--- a/gui/src/Dialogs/ApiKeysDialog.ui
+++ b/gui/src/Dialogs/ApiKeysDialog.ui
@@ -50,7 +50,7 @@
       </font>
      </property>
      <property name="text">
-      <string> API Keys for Osint Engines:</string>
+      <string> API Keys for Osint Engines</string>
      </property>
     </widget>
    </item>
