--- a/gui/res/themes/stylesheet.qss
+++ b/gui/res/themes/stylesheet.qss
@@ -443,7 +443,13 @@ QRadioButton {
 }
 
 QRadioButton:hover {
-     border-style:solid;
+     border-style: solid;
      border-width:1px;
      border-color: rgb(50,50,50);
+}
+
+QGroupBox{
+    border-style: solid;
+    border-width:1px;
+    border-color: rgb(47,47,47);
 }
