--- a/gui/src/MainWindow.ui
+++ b/gui/src/MainWindow.ui
@@ -459,9 +459,15 @@ QRadioButton {
 }
 
 QRadioButton:hover {
-     border-style:solid;
+     border-style: solid;
      border-width:1px;
      border-color: rgb(50,50,50);
+}
+
+QGroupBox{
+    border-style: solid;
+    border-width:1px;
+    border-color: rgb(47,47,47);
 }
 </string>
   </property>
