--- a/gui/src/tools/EmailTool.ui
+++ b/gui/src/tools/EmailTool.ui
@@ -124,12 +124,12 @@
           <item>
            <widget class="QLabel" name="label">
             <property name="text">
-             <string>*Config</string>
+             <string>*Scan Config</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QToolButton" name="toolButton_2">
+           <widget class="QToolButton" name="buttonConfig">
             <property name="text">
              <string>Config...</string>
             </property>
