--- a/sub3suite/src/engines/raw/Raw.ui
+++ b/sub3suite/src/engines/raw/Raw.ui
@@ -77,6 +77,25 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="minimumSize">
+        <size>
+         <width>200</width>
+         <height>20</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>20</height>
+        </size>
+       </property>
+       <property name="value">
+        <number>24</number>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -233,7 +252,7 @@
             </layout>
            </item>
            <item>
-            <widget class="QPlainTextEdit" name="plainTextEdit">
+            <widget class="QPlainTextEdit" name="plainTextEditResults">
              <property name="readOnly">
               <bool>true</bool>
              </property>
@@ -370,7 +389,7 @@
             </layout>
            </item>
            <item>
-            <widget class="QTreeView" name="treeView">
+            <widget class="QTreeView" name="treeViewResults">
              <property name="font">
               <font>
                <family>MS Shell Dlg 2</family>
