--- a/sub3suite/src/tools/SSLTool.ui
+++ b/sub3suite/src/tools/SSLTool.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CertTool</class>
- <widget class="QDialog" name="CertTool">
+ <class>SSLTool</class>
+ <widget class="QDialog" name="SSLTool">
   <property name="geometry">
    <rect>
     <x>0</x>
